gitops/opencloud/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencloud
  namespace: opencloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: opencloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opencloud
    spec:
      containers:
      - name: opencloud
        image: opencloudeu/opencloud-rolling:latest
        ports:
        - name: http
          containerPort: 9200
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          privileged: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: opencloud-data
          mountPath: /var/lib/opencloud
        - name: opencloud-config
          mountPath: /etc/opencloud
          # subPath: opencloud.yaml
      volumes:
      - name: opencloud-data
        emptyDir: {}
        # persistentVolumeClaim:
        #   claimName: opencloud-pvc
      - name: opencloud-config
        configMap:
          name: config

---
apiVersion: v1
kind: Service
metadata:
  name: opencloud
  namespace: opencloud
spec:
  selector:
    app.kubernetes.io/name: opencloud
  ports:
  - name: http
    protocol: TCP
    port: 9200
    targetPort: 9200
  - name: collabora-http
    protocol: TCP
    port: 9300
    targetPort: 9300
  - name: collabora-grpc
    protocol: TCP
    port: 9301
    targetPort: 9301
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencloud-ingress
  namespace: opencloud
spec:
  tls:
  - hosts:
    - docs.buc.sh
    secretName: cert-docs-buc-sh
  rules:
    - host: docs.buc.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencloud
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencloud-http
  namespace: opencloud
spec:
  rules:
    - host: docs.10.0.0.21.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencloud
                port:
                  name: http
    - host: office.10.0.0.21.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencloud
                port:
                  name: http
    - host: docs.10.0.0.21.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencloud
                port:
                  name: http
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: opencloud-pvc
#   namespace: opencloud
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 10Gi
